<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintDimensionRatio="2:5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/boitier_area_classic"
        android:contentDescription="@string/background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_display_area"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintBottom_toTopOf="@+id/buttonClearBoitier" >

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="answerB,answerC,answerD,answerA" />

        <TextView
            android:id="@+id/currentQuestion"
            style="@style/BoiterQuestionLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/barrierAnswers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/answerA"
            style="@style/BoiterAnswerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="A"
            app:layout_constraintBottom_toTopOf="@+id/answerB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/answerB"
            style="@style/BoiterAnswerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="B"
            app:layout_constraintBottom_toTopOf="@+id/answerC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerA" />

        <TextView
            android:id="@+id/answerC"
            style="@style/BoiterAnswerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="C"
            app:layout_constraintBottom_toTopOf="@+id/answerD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerB" />

        <TextView
            android:id="@+id/answerD"
            style="@style/BoiterAnswerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="D"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerC" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonClearBoitier"
        style="@style/BoiterToolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/red_button"
        android:text="@string/Boitier_ButtonLabelClear"
        app:layout_constraintBottom_toTopOf="@+id/buttonA"
        app:layout_constraintDimensionRatio="15:6"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/textLayout" />

    <Button
        android:id="@+id/buttonA"
        style="@style/BoiterQuestionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/yellow_button"
        android:text="@string/Boitier_ButtonLabelA"
        app:layout_constraintBottom_toTopOf="@+id/buttonB"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/buttonClearBoitier" />

    <Button
        android:id="@+id/buttonB"
        style="@style/BoiterQuestionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/yellow_button"
        android:text="@string/Boitier_ButtonLabelB"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/buttonA" />

    <Button
        android:id="@+id/buttonC"
        style="@style/BoiterQuestionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/yellow_button"
        android:text="@string/Boitier_ButtonLabelC"
        app:layout_constraintBottom_toTopOf="@+id/buttonD"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/buttonB" />

    <Button
        android:id="@+id/buttonD"
        style="@style/BoiterQuestionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/yellow_button"
        android:text="@string/Boitier_ButtonLabelD"
        app:layout_constraintBottom_toTopOf="@+id/buttonValidateBoitier"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/buttonC" />

    <Button
        android:id="@+id/buttonValidateBoitier"
        style="@style/BoiterToolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/green_button"
        android:text="@string/Boitier_ButtonLabelValidate"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintDimensionRatio="15:6"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/buttonD" />

    <ImageButton
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/return_to_home"
        android:background="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
